=== master

* Fix CICPHash#select to return CICPHash instance on Ruby 1.9+ (jeremyevans)

* Fix CICPHash#to_s to operate like #inspect on Ruby 1.9+ (jeremyevans)

=== 2.0.0 (2021-12-10)

* Support new Hash instance methods added in 1.9 - 3.0 (jeremyevans)

* Make sure CICPHash has the same interface as Hash in all Ruby versions (jeremyevans)

=== 1.1.0 (2012-09-04)

* Support new Hash instance methods added in 1.9 (jeremyevans)

* Fix dup and clone to return copies (jeremyevans)

=== 1.0.0 (2007-08-13)

* Initial release (jeremyevans)